[package]
name = "example_project"
version = "0.1.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

[[package.metadata.lldb.renderers]]
path = "pretty-printers/lldb/foo.py"
regex = "^example_project::Foo$"
python_class = "lldb_lookup.FooSummaryProvider"
is-summary = true

[[package.metadata.gdb.pretty-printers]]
path = "pretty-printers/gdb/foo.py"
python_class = "lldb_lookup.summary_lookup"
