[package]
name = "intellij-rust-native-helper"
version = "0.1.0"
edition = "2018"

[dependencies.ra_ap_proc_macro_srv]
git = "https://github.com/rust-analyzer/rust-analyzer"
package = "proc_macro_srv"
rev = "791722b70ad08641a48f96faedffdda6d2880366"

[target."cfg(windows)".dependencies.winapi]
version = "*"
features = ["winerror", "processthreadsapi", "psapi"]

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
