[package]
name = "intellij-rust-native-helper"
version = "0.1.0"
edition = "2018"

[dependencies]
ra_ap_proc_macro_srv = "=0.0.98"

[target."cfg(windows)".dependencies.winapi]
version = "*"
features = ["winerror", "processthreadsapi", "psapi"]

[profile.release]
lto = "fat"
codegen-units = 1
debug = false
